--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -63,6 +63,8 @@
     @media (max-width: 993px)
       order: 2
       margin: auto
+    @media (max-width: 575px)
+      width: 100%
     &-header
       position: relative
       display: flex
@@ -542,6 +544,9 @@
 .home__slider
   margin: 0 -10px
 
+  @media (max-width: 575px)
+    margin: 0
+
 .single-card
   position: relative
   display: flex !important
@@ -550,7 +555,7 @@
   min-height: 210px
   margin: 15px 10px
   padding: 20px 55px 10px 25px
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.15)
+  box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.15)
   background-color: #fff
   @media (max-width: 993px)
     margin-left: 5px
@@ -653,14 +658,14 @@
     right: 1230px
 
 .home-card
-  width: 90% !important
+  width: 90%
   min-height: 200px !important
   margin: 15px 10px 0 !important
   margin-left: 43px !important
   @media (max-width: 1500px)
     margin-left: 33px !important
-  @media (max-width: 475px)
-    width: 100% !important
+  @media (max-width: 575px)
+    width: auto
     margin-left: 0 !important
     margin-right: 0 !important
 
@@ -731,14 +736,14 @@
     height: 270px !important
 
 .home-card.slick-slide.slick-current.slick-active
-  width: 96% !important
+  width: 96%
   margin-left: 10px !important
   transition: all ease .5s
   @media (max-width: 1500px)
-    width: 90% !important
+    width: 90%
     margin-left: 33px !important
-  @media (max-width: 475px)
-    width: 100% !important
+  @media (max-width: 576px)
+    width: auto
     margin-left: 0 !important
     margin-right: 0 !important
 
